# halide

./: .gitignore  Cargo.toml  README.md
offline/: Cargo.toml
offline/src/: main.rs
raytracer/: Cargo.toml
raytracer/benches/: sphere_demo.rs
raytracer/src/: camera.rs  geom.rs  halton.rs  hittable.rs  lib.rs  material.rs  renderer.rs  scene.rs  util.rs
ui/: Cargo.toml  imgui.ini
ui/src/: main.rs  system.rs  timer.rs
