[package]
name = "halide-raytracer"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
glam = { version = "0.22.0", features = ["glam-assert", "rand"] }
parking_lot = "0.12.1"
rand = "0.8.5"
rayon = "1.6.1"

[dev-dependencies]
criterion = "0.4.0"
float_eq = "1.0.1"

[[bench]]
name = "sphere_demo"
harness = false