[package]
name = "halide-ui"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
glam = { version = "0.22.0", features = ["glam-assert"] }
glium = "0.32.1"
"halide-raytracer" = {path = "../raytracer"}
imgui = { version = "0.10.0" }
imgui-glium-renderer = "0.10.0"
imgui-winit-support = "0.10.0"
